Services auf Frontpage korrigiert

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -179,12 +179,12 @@
       "empty": "Momentan sind keine Leistungen verfügbar.",
       "mail": "Mail",
       "mailDescription": "DSGVO-konformer E-Mail-Service für Unternehmen und NGOs.",
-      "hosting": "Hosting",
-      "hostingDescription": "Sicheres, zuverlässiges und betreutes Hosting für Websites und Plattformen.",
+      "services": "Services",
+      "servicesDescription": "Sicheres, zuverlässiges und betreutes Hosting für Websites und Plattformen.",
       "software": "Software",
       "softwareDescription": "Individuelle Softwareentwicklung – exakt angepasst an Ihre Prozesse.",
-      "websites": "Websites",
-      "websitesDescription": "Maßgeschneiderte Websites und interaktive Webanwendungen.",
+      "website": "Webseiten",
+      "websiteDescription": "Maßgeschneiderte Webseiten und interaktive Webanwendungen.",
       "aiSystems": "KI-Systeme",
       "aiSystemsDescription": "Intelligente Assistenzlösungen für Automatisierung und fundierte Entscheidungen."
     },
