--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -179,12 +179,12 @@
       "empty": "No services available at the moment.",
       "mail": "Mail",
       "mailDescription": "GDPR-compliant email service for companies and NGOs.",
-      "hosting": "Hosting",
-      "hostingDescription": "Secure, reliable, and managed hosting for websites and platforms.",
+      "services": "Services",
+      "servicesDescription": "Secure, reliable, and managed hosting for websites and platforms.",
       "software": "Software",
       "softwareDescription": "Custom software development – precisely tailored to your processes.",
-      "websites": "Websites",
-      "websitesDescription": "Custom-built websites and interactive web applications.",
+      "website": "Websites",
+      "websiteDescription": "Custom-built websites and interactive web applications.",
       "aiSystems": "AI Systems",
       "aiSystemsDescription": "Intelligent assistant solutions for automation and informed decisions."
     },
