CTA-Button bei Produkte vereinheitlicht

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -667,11 +667,10 @@
     "premiumSLA": "Premium SLA",
     "additionalSupport": "Zusätzliche Support-Pakete",
     "serverModels": "Server-Modelle",
-    "ctaTitle": "Bereit für sorgenfreies Hosting?",
-    "ctaText": "Jetzt anfragen & individuelle Lösung sichern:",
+    "ctaTitle": "Entlastung beginnt hier.",
+    "ctaText": "Kontaktieren Sie uns für ein individuelles Angebot oder weitere Informationen.",
     "contactButton": "Kontakt aufnehmen",
-    "learnMore": "Oder mehr erfahren:",
-    "contactPage": "Kontaktseite",
+    "notice": "Wir melden uns bei Ihnen binnen 24 Stunden.",
     "emergencyNote": "24/7 Notfall-Support für unternehmenskritische Anwendungen (Details auf Anfrage)",
     "table": {
       "package": "Paket",
