Websites und Software noch korrigiert

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -671,6 +671,12 @@
     "ctaText": "Kontaktieren Sie uns für ein individuelles Angebot oder weitere Informationen.",
     "contactButton": "Kontakt aufnehmen",
     "notice": "Wir melden uns bei Ihnen binnen 24 Stunden.",
+    "whyus": "Warum Sie sich für Rieger Software entscheiden sollten",
+    "whatWeDo": "Wobei wir unsere Kunden begleiten",
+    "singlePrice": "Einzelpreis",
+    "detailedDescription": "Detaillierte Beschreibung",
+    "targetGroups": "Zielgruppen",
+    "financing": "Ihr Weg zur passenden Finanzierung",
     "emergencyNote": "24/7 Notfall-Support für unternehmenskritische Anwendungen (Details auf Anfrage)",
     "table": {
       "package": "Paket",
