--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -605,6 +605,12 @@
     "ctaText": "Request now & secure your individual solution:",
     "contactButton": "Contact us",
     "notice": "We'll respond within 24 hours.",
+    "whyus": "Why Rieger Software is the right choice",
+    "whatWeDo": "How we help our clients",
+    "singlePrice": "Single price",
+    "detailedDescription": "Detailed Description",
+    "targetGroups": "Target Groups",
+    "financing": "How to finance your Project",
     "emergencyNote": "24/7 emergency support for business-critical applications (details on request)",
     "table": {
       "package": "Package",
