--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -185,8 +185,8 @@
       "softwareDescription": "Individuelle Softwareentwicklung – exakt angepasst an Ihre Prozesse.",
       "website": "Webseiten",
       "websiteDescription": "Maßgeschneiderte Webseiten und interaktive Webanwendungen.",
-      "aiSystems": "KI-Systeme",
-      "aiSystemsDescription": "Intelligente Assistenzlösungen für Automatisierung und fundierte Entscheidungen."
+      "aisystems": "KI-Systeme",
+      "aisystemsDescription": "Intelligente Assistenzlösungen für Automatisierung und fundierte Entscheidungen."
     },
     "highlight": {
       "sectionTitle": "Projekt im Fokus",
