--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -185,8 +185,8 @@
       "softwareDescription": "Custom software development – precisely tailored to your processes.",
       "website": "Websites",
       "websiteDescription": "Custom-built websites and interactive web applications.",
-      "aiSystems": "AI Systems",
-      "aiSystemsDescription": "Intelligent assistant solutions for automation and informed decisions."
+      "aisystems": "AI Systems",
+      "aisystemsDescription": "Intelligent assistant solutions for automation and informed decisions."
     },
     "highlight": {
       "sectionTitle": "Project in Focus",
