Lokalisiert Webseite mobile ansicht

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -674,6 +674,8 @@
     "whyus": "Warum Sie sich für Rieger Software entscheiden sollten",
     "whatWeDo": "Wobei wir unsere Kunden begleiten",
     "singlePrice": "Einzelpreis",
+    "showDetails": "Details anzeigen",
+    "isIncluded": "Enthalten in",
     "detailedDescription": "Detaillierte Beschreibung",
     "targetGroups": "Zielgruppen",
     "financing": "Ihr Weg zur passenden Finanzierung",
