--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -608,6 +608,8 @@
     "whyus": "Why Rieger Software is the right choice",
     "whatWeDo": "How we help our clients",
     "singlePrice": "Single price",
+    "showDetails": "Show Details",
+    "isIncluded": "Is included in",
     "detailedDescription": "Detailed Description",
     "targetGroups": "Target Groups",
     "financing": "How to finance your Project",
