--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -419,7 +419,7 @@
       "image": "/images/projects/amaracall.png",
       "title": "AmaraCall – AI-Powered Answering Service",
       "description": "Flexible call solution for businesses",
-      "status": "Concept phase",
+      "status": "In development",
 
       "section1Title": "Description",
       "section1Content": "AmaraCall is a flexible, AI-powered call system for companies from various industries. The solution provides intelligent telephone assistance that answers calls, holds conversations, and prepares relevant information in a structured way. The focus is on centralized processing to make management and updates of AI models efficient and reliable. AmaraCall is offered as a centrally hosted service to enable quick and easy integration into existing systems.",
