--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -580,7 +580,16 @@
     "section7Content": "Die Verarbeitung personenbezogener Daten erfolgt ausschließlich im Rahmen der geltenden Datenschutzgesetze. Nähere Informationen finden Sie in unserer {privacyPolicyLink}.",
     "privacyPolicyLinkText": "Datenschutzerklärung",
     "section8Title": "8. Vertraulichkeit",
-    "section8Content": "Beide Parteien verpflichten sich, sämtliche im Rahmen der Zusammenarbeit erlangten Informationen vertraulich zu behandeln und nicht an Dritte weiterzugeben, es sei denn, dies ist zur Vertragserfüllung erforderlich oder gesetzlich vorgeschrieben."
+    "section8Content": "Beide Parteien verpflichten sich, sämtliche im Rahmen der Zusammenarbeit erlangten Informationen vertraulich zu behandeln und nicht an Dritte weiterzugeben, es sei denn, dies ist zur Vertragserfüllung erforderlich oder gesetzlich vorgeschrieben.",
+    "section9Title": "9. Schlussbestimmungen",
+    "section9Content1": "Sollten einzelne Bestimmungen dieser AGB ganz oder teilweise unwirksam sein oder werden, bleibt die Wirksamkeit der übrigen Bestimmungen unberührt.",
+    "section9Content2": "Änderungen und Ergänzungen dieser AGB bedürfen der Schriftform.",
+    "section9Content3": "Es gilt ausschließlich österreichisches Recht. Gerichtsstand ist Innsbruck, sofern nicht zwingende gesetzliche Bestimmungen etwas anderes vorsehen.",
+    "section10Title": "10. Anbieterinformationen",
+    "section10Company": "Rieger Systems GmbH",
+    "section10AddressLine1": "Teststraße 123",
+    "section10AddressLine2": "6020 Innsbruck, Österreich",
+    "section10EmailLabel": "E-Mail:"
   },
   "ai": {
     "hero": {
